<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddPrescriptionActivity">

    <TextView
        android:id="@+id/tvPres"
        android:layout_width="283dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/prescription_information"
        android:textAlignment="center"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvPatientName"
        android:layout_width="365dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:layout_marginTop="108dp"
        android:hint="@string/enter_patient_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPres" />

    <EditText
        android:id="@+id/tvHealthCardNum"
        android:layout_width="365dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_healthcard_num"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPatientName" />

    <TextView
        android:id="@+id/tvDrug"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/select_drug"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHealthCardNum" />

    <Spinner
        android:id="@+id/spnDrugList"
        android:layout_width="254dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/tvDrug"
        app:layout_constraintTop_toBottomOf="@+id/tvHealthCardNum" />

    <Button
        android:id="@+id/btnAddPres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

    <TextView
        android:id="@+id/tvDueDate"
        android:layout_width="72dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/due_by"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQuantity" />

    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@android:color/white"
        android:text="JAN 01 2020"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvDueDate"
        app:layout_constraintTop_toBottomOf="@+id/etQuantity" />

    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="365dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:hint="Enter Prescribed Quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnDrugList" />

</androidx.constraintlayout.widget.ConstraintLayout>